# spacenet_flood_detection

./: .gitignore  LICENSE  README.md  environment.cpu.yml  environment.cuda.yml  pyproject.toml  rewrite.sh
data/processed/metadata/: regions.csv  splits.csv
logs/dummy/: config.json
notebooks/: check_datasets.ipynb  check_labels.ipynb  data_exploration.ipynb  data_exploration_organized.ipynb
run_files/: run_train.sh
scratch/: gN8F.py
scripts/: prepare_data.py  train.py
src/spacenet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/spacenet/configs/: __init__.py  data.py  dist.py  general.py  model.py  train.py
src/spacenet/dataset/: collate.py  data_processing.py  data_processing_old.py  data_utils.py  datasets.py  tile_sampler.py
src/spacenet/models/: UNet_basic.py
src/spacenet/training/: policies.py  trainer.py
src/spacenet/utils/: cli.py  datasets.py  io.py  model_utils.py  paths.py  preprocess_cli.py  random.py
tests/: test_UNet.py  test_collate_behavior.py  test_configs.py  test_datasets.py  test_image_processing.py  test_image_processing_old.py  test_running_stats.py  test_seeds_cpu.py  test_shuffle_dict.py
