[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacenet"                # choose a unique name
version = "0.1.0"
requires-python = ">=3.9,<3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "h5py",
  "geopandas",
  "tifffile",
  "opencv-python",
  "shared-lib @ git+https://github.com/mweik23/shared-lib.git@main"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]